--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>xBank</title>
+      <script>
+    window.global = window;
+  </script>
+  <script type="module">
+    import process from "process";
+    import EventEmitter from "events";
+    import {Buffer} from "buffer";
+    window.Buffer = Buffer;
+    window.process = process;
+    window.EventEmitter = EventEmitter;
+  </script>
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
