feat: sign request when connect

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      function addEventListener() {
-        window.ethereum.on('accountsChanged', () => {
-          window.location.reload()
-        })
-      }
+      // function addEventListener() {
+      //   window.ethereum.on('accountsChanged', () => {
+      //     window.location.reload()
+      //   })
+      // }
 
-      function removeEventListener() {
-        window.ethereum.removeListener('accountsChanged', () => {
-          console.log('removed')
-        })
-      }
+      // function removeEventListener() {
+      //   window.ethereum.removeListener('accountsChanged', () => {
+      //     console.log('removed')
+      //   })
+      // }
 
-      window.addEventListener('load', addEventListener)
-      window.addEventListener('beforeunload', removeEventListener)
+      // window.addEventListener('load', addEventListener)
+      // window.addEventListener('beforeunload', removeEventListener)
     </script>
   </body>
 </html>
